<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.learning.twilson.baking.activities.RecipeDetailActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/flRecipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btnPrevious"
            android:layout_width="@dimen/navigationButtonWidth"
            android:layout_height="@dimen/navigationButtonHeight"
            android:layout_marginStart="@dimen/prevButtonStartMargin"
            android:layout_marginTop="@dimen/navigationButtonTopMargin"
            android:onClick="onNavClick"
            android:text="@string/prevButtonText"
            android:textSize="@dimen/navButtonTextSize"
            app:layout_constraintTop_toBottomOf="@+id/flRecipe"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="@dimen/navigationButtonWidth"
            android:layout_height="@dimen/navigationButtonHeight"
            android:layout_marginEnd="@dimen/nextButtonEndMargin"
            android:layout_marginTop="@dimen/navigationButtonTopMargin"
            android:onClick="onNavClick"
            android:text="@string/nextButtonText"
            android:textSize="@dimen/navButtonTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flRecipe" />
        </android.support.constraint.ConstraintLayout>
</ScrollView>