...
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvRecipeTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recipeTitleHeight"
            android:text="@string/defaultHeaderText"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/recipeDetailTitleTextSize"
...
                android:text="@string/stepsLabel"
                android:textSize="@dimen/recipeDetailHeaderTextSize"
                android:paddingTop="@dimen/defaultPadding"
                android:paddingLeft="@dimen/defaultPadding"
                android:textStyle="bold"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/listPadding"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
