<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RecipesFragment">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/polka_dots">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvRecipeCards"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/defaultPadding"
            android:scrollbars="vertical"/>
    </LinearLayout>
</FrameLayout>