...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/tvStepDetailHorizontalBias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnStepInfo"
        android:layout_width="@dimen/stepsInfoButtonSize"
        android:layout_height="@dimen/stepsInfoButtonSize"
        android:layout_marginBottom="@dimen/paddingForButtonInfo"
        android:layout_marginEnd="@dimen/paddingForButtonInfo"
        android:layout_marginStart="@dimen/paddingForButtonInfo"
        android:background="@drawable/info_button"
...
